# saral

./: LICENSE  Readme.md  index.html  pyproject.toml  requirement.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
chapter-00/: 00.hi.ipynb  00.intro.ipynb  01.ipynb  en.ipynb  intro.ipynb
chapter-01/: 01.ipynb  en.ipynb  hi.ipynb
chapter-02/: 01.ipynb  en.ipynb  hi.ipynb
chapter-03/: 01.ipynb  en.ipynb  hi.ipynb
chapter-04/: 01.ipynb  en.ipynb  hi.ipynb
chapter-05/: 01.ipynb  en.ipynb  hi.ipynb
chapter-06/: 01.ipynb  en.ipynb  hi.ipynb
chapter-07/: 01.ipynb  hi.ipynb
chapter-08/: 01.ipynb  hi.ipynb
chapter-09/: 01.ipynb  hi.ipynb
chapter-10/: 01.ipynb  hi.ipynb
chapter-11/: 01.ipynb  hi.ipynb
chapter-12/: 01.ipynb  hi.ipynb
chapter-13/: 01.ipynb  hi.ipynb
chapter-14/: 01.ipynb  hi.ipynb
chapter-15/: 01.ipynb  hi.ipynb
chapter-16/: 01.ipynb  hi.ipynb
chapter-17/: 01.ipynb  hi.ipynb
chapter-18/: 01.ipynb  hi.ipynb
chapter-19/: 01.ipynb  hi.ipynb
chapter-20/: 01.ipynb  hi.ipynb
chapter-21/: 01.ipynb  hi.ipynb
chapter-22/: 01.ipynb  hi.ipynb
chapter-23/: 01.ipynb  hi.ipynb
chapter-24/: 01.ipynb  hi.ipynb
chapter-25/: 01.ipynb  hi.ipynb
chapter-26/: 01.ipynb  hi.ipynb
chapter-27/: 01.ipynb  hi.ipynb
chapter-28/: 01.ipynb  hi.ipynb
chapter-29/: 01.ipynb  hi.ipynb
chapter-30/: 01.ipynb  hi.ipynb
chapter-31/: 01.ipynb  hi.ipynb
chapter-32/: 01.ipynb  hi.ipynb
chapter-33/: 01.ipynb  hi.ipynb
chapter-34/: 01.ipynb  hi.ipynb
chapter-35/: 01.ipynb  hi.ipynb
chapter-36/: 01.ipynb  hi.ipynb
(+30 files in other folders)
