[tool.poetry]
name = "python-seekhen-course"
version = "1.0.0"
description = "Python सीखें – आसान भाषा में course with examples, exercises and projects"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.25.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
tensorflow = "^2.14.0"
flask = "^2.4.2"
tkinter = "*"
jupyter = "^1.0.0"
python-dotenv = "^1.1.1"
openai = "^1.8.4"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
